some checkstyle